--- a/index.html
+++ b/index.html
@@ -11,11 +11,16 @@
     .note.selected { background: #cce5ff; }
     .note.target { background: #d4edda; }
     #intervalDisplay { margin-top: 1rem; font-size: 1.2rem; }
+    #abbrToggleLabel { margin-bottom: 1rem; display: inline-block; font-size: 0.95rem; }
   </style>
 </head>
 <body>
   <h1>Guitar Fretboard Interval Trainer</h1>
   <p>Click a note to set the root, then another note to see the interval.</p>
+  <label id="abbrToggleLabel">
+    <input type="checkbox" id="abbrToggle">
+    Use interval abbreviations
+  </label>
   <div class="fretboard" id="fretboard"></div>
   <div id="intervalDisplay"></div>
 
@@ -23,8 +28,24 @@
     const notes = ['C', 'C#', 'D', 'D#', 'E', 'F', 'F#', 'G', 'G#', 'A', 'A#', 'B'];
     const tuning = ['E', 'B', 'G', 'D', 'A', 'E']; // from high to low
 
+    const intervals = [
+      { name: 'Unison', abbr: 'P1' },
+      { name: 'Minor 2nd', abbr: 'm2' },
+      { name: 'Major 2nd', abbr: 'M2' },
+      { name: 'Minor 3rd', abbr: 'm3' },
+      { name: 'Major 3rd', abbr: 'M3' },
+      { name: 'Perfect 4th', abbr: 'P4' },
+      { name: 'Tritone', abbr: 'TT' },
+      { name: 'Perfect 5th', abbr: 'P5' },
+      { name: 'Minor 6th', abbr: 'm6' },
+      { name: 'Major 6th', abbr: 'M6' },
+      { name: 'Minor 7th', abbr: 'm7' },
+      { name: 'Major 7th', abbr: 'M7' },
+    ];
+
     const fretboard = document.getElementById('fretboard');
     const intervalDisplay = document.getElementById('intervalDisplay');
+    const abbrToggle = document.getElementById('abbrToggle');
 
     let rootNote = null;
     let targetNote = null;
@@ -36,12 +57,7 @@
 
     function getInterval(root, target) {
       const semitones = (notes.indexOf(target) - notes.indexOf(root) + 12) % 12;
-      const intervalNames = [
-        'Unison', 'Minor 2nd', 'Major 2nd', 'Minor 3rd', 'Major 3rd',
-        'Perfect 4th', 'Tritone', 'Perfect 5th', 'Minor 6th', 'Major 6th',
-        'Minor 7th', 'Major 7th'
-      ];
-      return intervalNames[semitones];
+      return abbrToggle.checked ? intervals[semitones].abbr : intervals[semitones].name;
     }
 
     function renderFretboard() {
