--- a/index.html
+++ b/index.html
@@ -5,32 +5,45 @@
   <title>Guitar Interval Trainer</title>
   <style>
     body { font-family: sans-serif; text-align: center; padding: 2rem; }
-    .fretboard { display: grid; grid-template-columns: repeat(13, 60px); gap: 4px; justify-content: center; }
-    .string { display: contents; }
+    .controls { margin-bottom: 1rem; }
+    .fretboard-wrapper { display: inline-block; overflow-x: auto; }
+    .fretboard { display: grid; grid-template-columns: 40px repeat(13, 60px); gap: 4px; }
+    .fret-labels { display: contents; font-weight: bold; }
+    .fret-label { padding: 4px; }
+    .string-label { display: flex; align-items: center; justify-content: center; font-weight: bold; }
     .note { padding: 8px; border: 1px solid #ccc; cursor: pointer; background: #f9f9f9; }
-    .note.selected { background: #cce5ff; }
+    .note.selected { background: #cce5ff; font-weight: bold; }
     .note.target { background: #d4edda; }
     #intervalDisplay { margin-top: 1rem; font-size: 1.2rem; }
-    #abbrToggleLabel, #symbolToggleLabel { margin-bottom: 1rem; display: inline-block; font-size: 0.95rem; margin-right: 1rem; }
+    #abbrToggleLabel, #symbolToggleLabel { margin-right: 1rem; font-size: 0.95rem; }
+    button { margin-top: 1rem; padding: 0.5rem 1rem; font-size: 1rem; }
+    @media (max-width: 768px) {
+      .note { padding: 6px; font-size: 0.85rem; }
+    }
   </style>
 </head>
 <body>
   <h1>Guitar Fretboard Interval Trainer</h1>
   <p>Click a note to set the root, then another note to see the interval.</p>
-  <label id="abbrToggleLabel">
-    <input type="checkbox" id="abbrToggle">
-    Use interval abbreviations
-  </label>
-  <label id="symbolToggleLabel">
-    <input type="checkbox" id="symbolToggle">
-    Use symbolic notation (♭, △, p)
-  </label>
-  <div class="fretboard" id="fretboard"></div>
+  <div class="controls">
+    <label id="abbrToggleLabel">
+      <input type="checkbox" id="abbrToggle">
+      Use interval abbreviations
+    </label>
+    <label id="symbolToggleLabel">
+      <input type="checkbox" id="symbolToggle">
+      Use symbolic notation (♭, △, p)
+    </label>
+    <button onclick="resetFretboard()">Reset</button>
+  </div>
+  <div class="fretboard-wrapper">
+    <div class="fretboard" id="fretboard"></div>
+  </div>
   <div id="intervalDisplay"></div>
 
   <script>
     const notes = ['C', 'C#', 'D', 'D#', 'E', 'F', 'F#', 'G', 'G#', 'A', 'A#', 'B'];
-    const tuning = ['E', 'B', 'G', 'D', 'A', 'E']; // from high to low
+    const tuning = ['E', 'B', 'G', 'D', 'A', 'E'];
 
     const intervals = [
       { name: 'Unison', abbr: 'P1', symbol: 'R' },
@@ -69,7 +82,23 @@
 
     function renderFretboard() {
       fretboard.innerHTML = '';
+
+      // First row: fret numbers
+      fretboard.appendChild(document.createElement('div')); // Empty corner
+      for (let fret = 0; fret <= 12; fret++) {
+        const label = document.createElement('div');
+        label.className = 'fret-label';
+        label.innerText = fret;
+        fretboard.appendChild(label);
+      }
+
+      // Strings with notes
       tuning.forEach((openNote, stringIndex) => {
+        const stringLabel = document.createElement('div');
+        stringLabel.className = 'string-label';
+        stringLabel.innerText = openNote;
+        fretboard.appendChild(stringLabel);
+
         for (let fret = 0; fret <= 12; fret++) {
           const note = getNoteAt(openNote, fret);
           const noteDiv = document.createElement('div');
@@ -89,18 +118,24 @@
       if (!rootNote) {
         rootNote = note;
         div.classList.add('selected');
+        div.innerText = 'R';
         intervalDisplay.innerText = `Root note set: ${note}`;
       } else if (!targetNote) {
         targetNote = note;
         div.classList.add('target');
         const interval = getInterval(rootNote, targetNote);
+        div.innerText = interval;
         intervalDisplay.innerText = `Interval from ${rootNote} to ${targetNote}: ${interval}`;
       } else {
-        rootNote = null;
-        targetNote = null;
-        document.querySelectorAll('.note').forEach(n => n.classList.remove('selected', 'target'));
-        intervalDisplay.innerText = '';
+        resetFretboard();
       }
+    }
+
+    function resetFretboard() {
+      rootNote = null;
+      targetNote = null;
+      renderFretboard();
+      intervalDisplay.innerText = '';
     }
 
     renderFretboard();
